<<<<<<< HEAD
<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">smartapp_team_five</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- Login view -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="smart">SMART</string>
    <string name="attempts">Attempts Left:</string>

    <!-- Appoinments view -->
    <string name="title_activity_confirm_appointment">ConfirmAppointmentActivity</string>

    <!-- Landing view -->
    <string name="title_activity_view_appointments">View Appointments</string>
    <string name="mssg_landing_page">Select the correct\nappointment calender</string>
    <string name="btn_clinics_landing_page">Clinics\n(Ante-natal)</string>
    <string name="btn_visits_landing_page">Visits\n(Post-natal)</string>

    <!-- Service view -->
    <string name="title_activity_service_options">Service Options</string>
    <string name="mssg_service_option">Select the Service\noption you would like to view</string>
    <string name="btn_clinics_domino_dublin">Domino (Dublin)</string>
    <string name="btn_clinics_domino_wicklow">Domino (Wicklow)</string>
    <string name="btn_clinics_eth_dublin">ETH Dublin</string>
    <string name="btn_clinics_eth_wicklow">ETH Wicklow</string>
    <string name="btn_clinics_satellite">Salellite</string>

    <!-- Clinics Dublin Domino -->
    <string name="title_activity_clinics_dublin_domino">Clinics Dublin Domino</string>
    <string name="mssg_dublin_domino">Select the Domino (Dublin) clinic\ncalendar you\'s like to view:</string>
    <string name="btn_d_d_nmh_opd">NMH (OPD location)\n\t-Evening Booking Clinic\n\t-Weekly, Monday</string>
    <string name="btn_d_d_leopardstown">Leopardstown\n\t-Weekly, Tuesday</string>
    <string name="btn_d_d_dun_laoghaire">Dun Laoghaire\n\t-St Michaels Hospital\n\t-Weekly Wednesday</string>
    <string name="btn_d_d_churchtown">ChurchTown\n\t-Weekly Thursday</string>
    <string name="btn_salellite">NMH\n\t-Weekly, Friday</string>
    <string name="btn_home_visits">Home Visits\n\t-Micscellaneous\n\t-Daily</string>

    <!-- Clinics Wicklow Domino -->
    <string name="title_activity_clinics_wicklow_domino">Wicklow Domino</string>
    <string name="mssg_wicklow_domino">Select the Domino (Wicklow) clinic\ncalendar you\'s like to view:</string>
    <string name="btn_d_w_graystone_mon">Graystones\n\t-Weekly, Monday</string>
    <string name="btn_d_w_graystones_tue">Graystones\n\t-Weekly, Tuesday</string>
    <string name="btn_d_w_kilmacanouge">Kilmacanogue\n\t-Weekly, Thursday</string>

    <!-- Clinics ETH Dublin -->
    <string name="title_activity_clinics_eth_dublin">Clinics ETH Dublin</string>
    <string name="mssg_eth_dublin">Select a clinic</string>
    <string name="btn_eth_d_ballinteer_mon">Ballinteer\n\t-Weekly, Monday</string>
    <string name="btn_eth_d_dunlaoghaire_tue">Dun Laoghaire\n\t-Weekly, Tuesday</string>

    <!-- Clinics ETH Wicklow -->
    <string name="title_activity_clinics_eth_wicklow">Clinics ETH Wicklow</string>
    <string name="mssg_eth_wicklow">Select a clinic</string>
    <string name="btn_eth_w_ballinteer_mon">Ballinteer\n\t-Weekly, Monday</string>
    <string name="btn_eth_w_dunlaoghaire_tue">Dun Laoghaire\n\t-Weekly, Tuesday</string>

    <!-- Clinics Salelitte -->
    <string name="title_activity_clinics_satellite">Satellite Clinics</string>
    <string name="mssg_satelitte">Select the Satelitte clinic\ncalender you\'d like to view</string>
    <string name="btn_satelitte_greystones">Greystones\n\t-Weekly, Monday</string>
    <string name="btn_satelitte_arklow">Arklow\n\t-Weekly, Tuesday</string>
    <string name="btn_satelitte_newtownmountkennedy">NewTownMountKennedy\n\t-Booking clinic\n\tWeekly, Wednesday</string>
    <string name="btn_satelitte_bray">Bray\n\t-Weekly, Thursday</string>

    <!-- Clinic Dates -->
    <string name="title_activity_clinic_dates">Clinic Dates</string>
    <string name="mssg_clinics_dates">Clinic Name Here</string>

    <!-- Service_User -->
    <string name="title_activity_service_user">Service User</string>
    <string name="label_0">ServiceUserActivity</string>
    <string name="label_1">Previous</string>
    <string name="label_2">Edit</string>
    <string name="label_3">Ante_natal</string>
    <string name="label_4">Post_natal</string>
    <string name="label_5">Contact</string>
    <string name="label_6">Next_of_kin</string>
    <string name="label_7">Book_Appointment</string>
    
        <!-- Activity Calender -->
    <string name="tvDate">dd/mm/yyyy</string>
	<string name="btnPrev">Prev</string>
	<string name="btnPext">Next</string>
	<string name="time1">8:00</string>
	
	<string name="tvProgress">0</string>
	<string name="tvScheduleApps">Schedule Appointments</string>
		
	<string name="name">name</string>
	<string name="gestation1">23+4</string>
	<string name="info">info</string>
	<string name="infoDesc">information button</string>
	<string name="clinicName">[Clinic Name]</string>
	<string name="title_activity_calender">Calender Activity</string>
=======
<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">smartapp_team_five</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- Login view -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="smart">SMART</string>
    <string name="attempts">Attempts Left:</string>

    <!-- Appoinments view -->
    <string name="title_activity_confirm_appointment">ConfirmAppointmentActivity</string>

    <!-- Landing view -->
    <string name="title_activity_view_appointments">View Appointments</string>
    <string name="mssg_landing_page">Select the correct\nappointment calender</string>
    <string name="btn_clinics_landing_page">Clinics\n(Ante-natal)</string>
    <string name="btn_visits_landing_page">Visits\n(Post-natal)</string>

    <!-- Service view -->
    <string name="title_activity_service_options">Service Options</string>
    <string name="mssg_service_option">Select the Service\noption you would like to view</string>
    <string name="btn_clinics_domino_dublin">Domino (Dublin)</string>
    <string name="btn_clinics_domino_wicklow">Domino (Wicklow)</string>
    <string name="btn_clinics_eth_dublin">ETH Dublin</string>
    <string name="btn_clinics_eth_wicklow">ETH Wicklow</string>
    <string name="btn_clinics_satellite">Salellite</string>

    <!-- Clinics Dublin Domino -->
    <string name="title_activity_clinics_dublin_domino">Clinics Dublin Domino</string>
    <string name="mssg_dublin_domino">Select the Domino (Dublin) clinic\ncalendar you\'s like to view:</string>
    <string name="btn_d_d_nmh_opd">NMH (OPD location)\n\t-Evening Booking Clinic\n\t-Weekly, Monday</string>
    <string name="btn_d_d_leopardstown">Leopardstown\n\t-Weekly, Tuesday</string>
    <string name="btn_d_d_dun_laoghaire">Dun Laoghaire\n\t-St Michaels Hospital\n\t-Weekly Wednesday</string>
    <string name="btn_d_d_churchtown">ChurchTown\n\t-Weekly Thursday</string>
    <string name="btn_salellite">NMH\n\t-Weekly, Friday</string>
    <string name="btn_home_visits">Home Visits\n\t-Micscellaneous\n\t-Daily</string>

    <!-- Clinics Wicklow Domino -->
    <string name="title_activity_clinics_wicklow_domino">Wicklow Domino</string>
    <string name="mssg_wicklow_domino">Select the Domino (Wicklow) clinic\ncalendar you\'s like to view:</string>
    <string name="btn_d_w_graystone_mon">Graystones\n\t-Weekly, Monday</string>
    <string name="btn_d_w_graystones_tue">Graystones\n\t-Weekly, Tuesday</string>
    <string name="btn_d_w_kilmacanouge">Kilmacanogue\n\t-Weekly, Thursday</string>

    <!-- Clinics ETH Dublin -->
    <string name="title_activity_clinics_eth_dublin">Clinics ETH Dublin</string>
    <string name="mssg_eth_dublin">Select a clinic</string>
    <string name="btn_eth_d_ballinteer_mon">Ballinteer\n\t-Weekly, Monday</string>
    <string name="btn_eth_d_dunlaoghaire_tue">Dun Laoghaire\n\t-Weekly, Tuesday</string>

    <!-- Clinics ETH Wicklow -->
    <string name="title_activity_clinics_eth_wicklow">Clinics ETH Wicklow</string>
    <string name="mssg_eth_wicklow">Select a clinic</string>
    <string name="btn_eth_w_ballinteer_mon">Ballinteer\n\t-Weekly, Monday</string>
    <string name="btn_eth_w_dunlaoghaire_tue">Dun Laoghaire\n\t-Weekly, Tuesday</string>

    <!-- Clinics Salelitte -->
    <string name="title_activity_clinics_satellite">Satellite Clinics</string>
    <string name="mssg_satelitte">Select the Satelitte clinic\ncalender you\'d like to view</string>
    <string name="btn_satelitte_greystones">Greystones\n\t-Weekly, Monday</string>
    <string name="btn_satelitte_arklow">Arklow\n\t-Weekly, Tuesday</string>
    <string name="btn_satelitte_newtownmountkennedy">NewTownMountKennedy\n\t-Booking clinic\n\tWeekly, Wednesday</string>
    <string name="btn_satelitte_bray">Bray\n\t-Weekly, Thursday</string>

    <!-- Clinic Dates -->
    <string name="title_activity_clinic_dates">Clinic Dates</string>
    <string name="mssg_clinics_dates">Clinic Name Here</string>

    <!-- Service_User -->
    <string name="title_activity_service_user">Service User</string>
    <string name="label_0">ServiceUserActivity</string>
    <string name="label_1">Previous</string>
    <string name="label_2">Edit</string>
    <string name="label_3">Ante_natal</string>
    <string name="label_4">Post_natal</string>
    <string name="label_5">Contact</string>
    <string name="label_6">Next_of_kin</string>
    <string name="label_7">Book_Appointment</string>

>>>>>>> ea6ec5f57395d1ecfdb5e09d6006b1024af19aab
</resources>