<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|start"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TextView
            android:id="@+id/tv_satellite_clinics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/mssg_satelitte" />

        <Button
            android:id="@+id/clinics_satellite_greystones"
            style="@style/ButtonStyle"
            android:text="@string/btn_satelitte_greystones" />

        <Button
            android:id="@+id/clinics_satellite_arklow"
            style="@style/ButtonStyle"
            android:text="@string/btn_satelitte_arklow" />

        <Button
            android:id="@+id/clinics_satellite_newtownmountkennedy"
            style="@style/ButtonStyle"
            android:text="@string/btn_satelitte_newtownmountkennedy" />

        <Button
            android:id="@+id/clinics_satellite_bray"
            style="@style/ButtonStyle"
            android:text="@string/btn_satelitte_bray" />
    </LinearLayout>

</ScrollView>