<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TextView
            android:id="@+id/tv_clinic_dates_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/mssg_dublin_domino" />

        <Button
            android:id="@+id/clinics_d_d_nmh_opd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/btn_d_d_nmh_opd" />

        <Button
            android:id="@+id/clinics_d_d_leopardstown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/btn_d_d_leopardstown" />

        <Button
            android:id="@+id/clinics_d_d_dun_laoghaire"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight=".5"
            android:gravity="center"
            android:text="@string/btn_d_d_dun_laoghaire" />

        <Button
            android:id="@+id/clinics_d_d_churchtown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight=".5"
            android:gravity="center"
            android:text="@string/btn_d_d_churchtown" />

        <Button
            android:id="@+id/clinics_satellite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight=".5"
            android:gravity="center"
            android:text="@string/btn_salellite" />

        <Button
            android:id="@+id/home_visits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight=".5"
            android:gravity="center"
            android:text="@string/btn_home_visits" />
    </LinearLayout>

</ScrollView>