<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:gravity="center_horizontal|start"  >

        <TextView
            android:id="@+id/tv_eth_wicklow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/mssg_dublin_domino" />

        <Button
            android:id="@+id/clinics_eth_w_ballinteer"
            style="@style/ButtonStyle"
            android:text="@string/btn_eth_w_ballinteer_mon" />

        <Button
            android:id="@+id/clinics_eth_w_dunlaoghaire"
            style="@style/ButtonStyle"
            android:text="@string/btn_eth_w_dunlaoghaire_tue" />
    </LinearLayout>

</ScrollView>