<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_font"
            android:layout_weight="1"
            android:gravity="center"
            android:src="@drawable/back" />

        <Button
            android:id="@+id/label_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/label_1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_font"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/label_0"
            android:textColor="#a10000"
            android:textSize="@dimen/padding_medium" />

        <Button
            android:id="@+id/label_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_font"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/label_2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3" >

        <Button
            android:id="@+id/label_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_font"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/label_3" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_font"
            android:layout_weight="1"
            android:gravity="center"
            android:src="@drawable/personal" />

        <Button
            android:id="@+id/label_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_font"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/label_4" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1" >

        <Button
            android:id="@+id/label_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_font"
            android:gravity="center"
            android:text="@string/label_7" />
    </LinearLayout>

</LinearLayout>